--- a/src/app/about-me.component.html
+++ b/src/app/about-me.component.html
@@ -1,3 +1,8 @@
-<p>
-  about-me works!
-</p>
+<div id="about">
+  <h1>About me</h1>
+  <p>Cute kittens</p>
+  <p><img src="http://placekitten.com/200/300" alt="meow"></p>
+  <p><img src="http://placekitten.com/300/200" alt="meow"></p>
+  <p><img src="http://placekitten.com/400/300" alt="meow"></p>
+  <p><img src="http://placekitten.com/200/500" alt="meow"></p>
+</div>
