--- a/src/app/contact-me.component.html
+++ b/src/app/contact-me.component.html
@@ -1,3 +1,9 @@
-<p>
-  contact-me works!
-</p>
+<div id="contact">
+  <h1>Contact me</h1>
+  <p>Name</p>  
+  <p>Address</p>  
+  <p>City</p>  
+  <p>Phone</p>  
+  <p>Email</p>  
+  <p>Web</p>  
+</div>
