--- a/src/app/nav-main.component.html
+++ b/src/app/nav-main.component.html
@@ -2,16 +2,19 @@
   <div class="container-fluid">
     <!-- Main left-side "home" link -->
     <div class="navbar-header">
-      <a href="#home" class="navbar-brand">Home</a>
+      <!-- <a href="#home" class="navbar-brand">Home</a> -->
+      <a class="navbar-brand" routerLink='/home'>Home</a>
     </div>
     <!-- Other links -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#about">About me</a>
+          <!-- <a href="#about">About me</a> -->
+          <a routerLink='/about'>About me</a>
         </li>
         <li>
-          <a href="#contact">Contact me</a>
+          <!-- <a href="#contact">Contact me</a> -->
+          <a routerLink='/contact'>Contact me</a>
         </li>
       </ul>
     </div>
