Update to real example with actual data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<app-nav-main></app-nav-main>
-<router-outlet></router-outlet>
-<!-- <app-home></app-home>
-<app-about-me></app-about-me>
-<app-contact-me></app-contact-me>
-<app-not-found></app-not-found> -->
+<div class="container">
+  <div><b>BTI425 code example - Routing scenarios</b></div>
+  <app-nav></app-nav>
+  <router-outlet></router-outlet>
+  <hr class="gap">
+  <footer>
+    <p>&copy; 2020 Seneca School of SDDS</p>
+  </footer>
+</div>
